# gnucash-importer

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  __init__.py  account.py  classifier_rules.csv  gnucash_importer.py  gnucash_interface.py  ledger.py  read_entry.py  regex_rules.csv  requirements.txt  setup.cfg  setup.py  todo.org  travis_ci.py  util.py
debian/: changelog  control  copyright  install  rules
doc/: model.uml
example/: other.gnucash  test_ledger.gnucash
gnucash-importer/: __init__.py  account.py  gnucash_importer.py  ledger.py  util.py
gnucash_importer/: __init__.py  account.py  classifier.py  cli.py  ledger.py  read_entry.py  run_app.py  util.py
test/: __init__.py  test_account.py  test_classifier.py  test_ledger.py  test_read_entry.py  test_util.py
test/fixtures/: creditcard.ofx  gnucash.conf  nubank.ofx  test_ledger.gnucash
