[metadata]
# This includes the license file(s) in the wheel.
license_files = LICENSE

# TODO implement common cfg
# FIXME get correct nubank's account path
[bdist_wheel]
universal = 0

[app_init]
default_currency = BRL
# default_gnucash_file = '/tmp/my_financial_record.gnucash' # FIXME set my personal file just in Nami
default_gnucash_file = example/test_ledger.gnucash
# default_account_src_file = '/tmp/report.ofx' # FIXME set my personal file just in Nami
default_account_src_file = example/local/nubank-2016-10.ofx
blackhole_account_path = 'Imbalance-BRL'				   # FIXME setup path
default_nubank_to = Imbalance-BRL:nubank
default_nubank_from = Liabilities:Credit Card:Nubank
default_ciw_to = Imbalance-BRL:Cash in Wallet
default_ciw_from = Assets:Cash in Wallet
default_cef_savings_to = Imbalance-BRL:cef-savings
default_cef_savings_from = Assets:Bank:CEF SA:Savings Account
default_itau_checking_account_to = Imbalance-BRL:itau-checking-account
default_itau_checking_account_from = Assets:Bank:Itau SA:Checking Account
default_itau_savings_to = Imbalance-BRL:itau-savings
default_itau_savings_from = Assets:Bank:Itau SA:Savings Account
default_bradesco_savings_to = Imbalance-BRL:bradesco-savings
default_bradesco_savings_from = Assets:Bank:Bradesco SA:Savings Account